# haskell-experiments

./: .travis.yml  stack.yaml
interpreter/: interpreter.cabal  stack.yaml
interpreter/lib/Data/: Code.hs  Scope.hs
interpreter/lib/Data/Expr/: Fix.hs
interpreter/src/: Main.hs  Main2.hs  Main3.hs  Main4.hs
