name:                interpreter
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/interpretter#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable interpreter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, type-natural, QuickCheck, constraints, either, containers

executable interpreter2
  hs-source-dirs:      src
  main-is:             Main2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, type-natural, QuickCheck, containers, singletons, equational-reasoning, constraints, lens, either

executable interpreter3
  hs-source-dirs:      src
  main-is:             Main3.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, type-natural, QuickCheck, either, containers, singletons, equational-reasoning, constraints, lens
